--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
       "use": "@vercel/node"
     },
     {
-      "src": "client/index.html",
+      "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
         "distDir": "client/dist"
@@ -24,3 +24,4 @@
     }
   ]
 }
+
