--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "This project contains url shortner apis",
   "main": "server.js",
   "scripts": {
-    "dev": "node dist/server.js",
+    "dev": "ts-node dist/server.js",
     "watch": "tsc -w",
     "start": "npm run build && node dist/server.js",
     "build": "tsc"
